# maple

./: .gitignore  .mcp.json  .npt-query-active.json  .npt.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: desktop-bundle.yml
.windsurf/workflows/: maple.md
apps/desktop/: index.html  package.json  test.html  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  badge-overrides.css  domain.ts  main.tsx  radius-overrides.css  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: codex_usage.rs  installer.rs  main.rs  maple_fs.rs  maple_protocol.rs  mcp_http.rs  process_utils.rs  tray_status.rs
apps/desktop/src/components/: AppBackground.tsx  TopNav.tsx  (+16 more)
apps/homepage/: IMAGE_NEED.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/homepage/src/: App.tsx  styles.css
apps/mobile/: package.json
apps/mobile/src/: main.ts
apps/video/: README.md  package.json
apps/video/src/: MaplePromo.tsx  Root.tsx  data.ts  styles.ts
apps/web/: package.json
apps/web/src/: main.ts
docs/: commercialization-opensource-strategy.md  maple-competitive-analysis.md  mcp-skills-setup.md  roadmap.md  windsurf-maple-setup.md
scripts/: maple-install.ps1  maple-install.sh
scripts/installers/: common.sh  install-maple-all.sh  install-maple-claude.sh  install-maple-codex.sh  install-maple-gemini.sh  install-maple-iflow.sh  install-maple-windsurf.sh
(+44 files in other folders)
