[package]
name = "maple_desktop"
version = "0.1.0"
description = "Maple desktop client"
authors = ["Maple"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
axum = "0.7"
tokio = { version = "1", features = ["net"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
